# 2IMA15CG

./: .gitignore  CMakeLists.txt  README.md
benchmark/: benchmark-DSaturSolver.csv  benchmark-DegreeGreedySolver.csv  benchmark-GreedySolver.csv  benchmark_parser.py
greedy_solutions/: reecn11799.321greedy.json  reecn12588.255greedy.json  reecn15355.342greedy.json  reecn16388.306greedy.json  reecn17244.326greedy.json  reecn18615.296greedy.json  reecn21194.374greedy.json  reecn21946.361greedy.json  reecn23484.358greedy.json  reecn23945.407greedy.json  reecn25913.490greedy.json  reecn27494.382greedy.json  reecn29395.426greedy.json  reecn31126.494greedy.json  reecn32569.547greedy.json  reecn3382.146greedy.json  reecn34307.601greedy.json  reecn36204.635greedy.json  reecn37593.468greedy.json  reecn39476.507greedy.json  reecn41237.690greedy.json  reecn42891.737greedy.json  reecn44299.668greedy.json  reecn45823.729greedy.json  reecn47287.626greedy.json  reecn48602.662greedy.json  reecn50133.609greedy.json  reecn51526.642greedy.json  reecn53304.579greedy.json  reecn54867.575greedy.json  reecn56737.540greedy.json  reecn58325.744greedy.json  reecn59950.634greedy.json  reecn61436.539greedy.json  reecn63079.621greedy.json  reecn64798.838greedy.json  reecn66642.735greedy.json  reecn68262.743greedy.json  reecn6910.242greedy.json  reecn69952.784greedy.json  (+185 more)
instance_reader/: README.md  converter.py  example.py  requirements.txt
instances/: overlap.instance.json  reecn12588.instance.json  reecn15355.instance.json  reecn16388.instance.json  reecn18615.instance.json  reecn21946.instance.json  reecn23945.instance.json  reecn25913.instance.json  reecn29395.instance.json  reecn31126.instance.json  reecn32569.instance.json  reecn3382.instance.json  reecn34307.instance.json  reecn37593.instance.json  reecn39476.instance.json  reecn3988.instance.json  reecn41237.instance.json  reecn44299.instance.json  reecn48602.instance.json  reecn53304.instance.json  (+160 more)
src/: cache.cpp  (+18 more)
(+72 files in other folders)
